# tessera-sdk-py

./: .gitignore  .tool-versions  LICENSE  README.md  README_CLIENTS.md  pyproject.toml
.github/workflows/: python.yml
docs/: README_CLIENTS.md  USAGE_GUIDE.md  rfc-0001-namespace-reorganization.md
tessera_sdk/: __init__.py  config.py
tessera_sdk/auth/: api_key_handler.py  auth_handler.py  token_handler.py
tessera_sdk/base/: __init__.py  client.py  exceptions.py
tessera_sdk/clients/: __init__.py
tessera_sdk/clients/_base/: __init__.py  client.py  exceptions.py
tessera_sdk/clients/custos/: __init__.py  client.py  exceptions.py
tessera_sdk/clients/identies/: __init__.py  client.py  exceptions.py
tessera_sdk/clients/looply/: __init__.py  client.py  exceptions.py
tessera_sdk/clients/modela/: __init__.py  client.py  exceptions.py
tessera_sdk/clients/quore/: __init__.py  client.py  exceptions.py
tessera_sdk/clients/sendly/: __init__.py  (+2 more)
tessera_sdk/constants/: __init__.py  http_methods.py
tessera_sdk/core/: database_manager.py
tessera_sdk/custos/: __init__.py  client.py  exceptions.py
tessera_sdk/domain/: __init__.py
tessera_sdk/events/: event.py  nats_healthcheck.py  nats_router.py
tessera_sdk/fastapi/: __init__.py  health.py
tessera_sdk/identies/: __init__.py  client.py  exceptions.py
tessera_sdk/infra/: __init__.py  auth_token_provider.py  cache.py  database.py  encrypted_types.py  encryption.py  m2m_token.py  service_factory.py
tessera_sdk/middleware/: authentication.py  user_onboarding.py
tessera_sdk/models/: __init__.py  encrypted_types.py  user.py
tessera_sdk/quore/: __init__.py  client.py  exceptions.py
tessera_sdk/schemas/: user.py
tessera_sdk/sendly/: __init__.py  client.py  exceptions.py
tessera_sdk/server/: __init__.py  exceptions.py
tessera_sdk/utils/: auth.py  authorization_dependency.py  cache.py  m2m_token.py  service_factory.py
tessera_sdk/vaulta/: __init__.py  client.py  exceptions.py
tests/clients/: test_clients.py
tests/events/: test_event.py  test_nats_router.py
tests/fastapi/: __init__.py  test_health.py
tests/middleware/: test_authentication_middleware.py  test_user_onboarding_middleware.py
tests/utils/: test_auth.py  test_auth_token_provider.py  test_authorization_dependency.py  test_encryption.py  test_m2m_token.py
(+69 files in other folders)
