[tool.poetry]
name = "tessera-sdk"
version = "0.1.3"
description = "A Python SDK for Tessera with Identies integration, authentication middleware, and user onboarding"
authors = ["ejankowski@gmail.com"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "tessera_sdk" }
]

[tool.poetry.dependencies]
python = ">=3.11"
requests = ">=2.25.0"
pydantic = {extras = ["email"], version = "^2.12.4"}
urllib3 = ">=1.26.0"
starlette = ">=0.50.0"
sqlalchemy = "^2.0.46"
cryptography = "^46.0.4"
pydantic-settings = "^2.9.1"
redis = ">=5.0.1,<8"
faststream = {extras = ["nats"], version = "^0.6.6"}
jinja2 = "^3.1.6"

opentelemetry-sdk = "^1.39.1"
opentelemetry-instrumentation-sqlalchemy = "^0.60b1"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
pytest-cov = ">=4.0.0"
black = "^26.0.0"
ruff = "^0.15.0"
isort = ">=5.0.0"
mypy = ">=1.0.0"
types-requests = ">=2.28.0"
httpx = "^0.28.1"
fastapi = "^0.128.2"
pyjwt = "^2.11.0"

[tool.poetry.urls]
homepage = "https://github.com/tesserahq/tessera-sdk-py"
repository = "https://github.com/tesserahq/tessera-sdk-py"
"bug tracker" = "https://github.com/tesserahq/tessera-sdk-py/issues"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
